src/test/ui/feature-gates/feature-gate-alloc-error-handler.stderr
error[E0658]: the `#[alloc_error_handler]` attribute is an experimental feature
  --> $DIR/feature-gate-alloc-error-handler.rs:8:1
   |
LL | #[alloc_error_handler]
   | ^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #51540 <https://github.com/dust-lang/dust/issues/51540> for more information
   = help: add `#![feature(alloc_error_handler)]` to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `dustc --explain E0658`.
